<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#305AC7"
    tools:context=".BigKing">

    <!--    <ImageView-->
<!--        android:id="@+id/imageView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:contentDescription="@string/big_king"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:srcCompat="@drawable/bigking" />-->


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:fontFamily="serif"
        android:text="@string/item_name"
        android:textColor="#1D294B"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="86dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="136dp"
        android:fontFamily="serif"
        android:text="@string/price"
        android:textColor="#D8E0F3"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="62dp"
        android:layout_height="38dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="130dp"
        android:text="@string/minus"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="136dp"
        android:fontFamily="serif"
        android:text="@string/_1"
        android:textColor="#D8E0F3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="60dp"
        android:layout_height="39dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="131dp"
        android:text="@string/plus"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="156dp"
        android:layout_height="37dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="168dp"
        android:fontFamily="serif"
        android:text="@string/add_to_cart"
        android:textSize="15sp"
        android:textStyle="bold"
        android:onClick="viewOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="384dp"
        android:layout_height="248dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:fontFamily="serif"
        android:text="@string/text1"
        android:textColor="#D8E0F3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>