<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#305AC7"
    tools:context=".ViewOrder">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="32dp"
        android:fontFamily="serif"
        android:text="@string/my_order"
        android:textColor="#1D294B"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="370dp"
        android:layout_height="62dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="128dp"
        android:text="@string/who"
        android:textColor="#D8E0F3"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="412dp"
        android:layout_height="104dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="632dp"
        android:background="#6AB9ED"
        android:gravity="center"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="serif"
            android:text="@string/total_6_50"
            android:textColor="#1D294B"
            android:textSize="35sp"
            android:textStyle="bold" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>